...
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="362dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/text_view_travelTimeLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.673"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurantLabel"
        app:layout_constraintVertical_bias="0.298">

...
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="checkButton"
            android:text="Driving" />

        <RadioButton
            android:id="@+id/radio_walking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkButton"
            android:text="Walking" />

        <RadioButton
...
