<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".Reminder" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </RelativeLayout>

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/restaurantName"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:gravity="center"
                android:text="Restaurant Name"
                android:textColor="@color/cardinal"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/reminderTitleOfPage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Enter your reminder title and pick a time you'd want to dine at!"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/reminderDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp" />

            <TimePicker
                android:id="@+id/reminderTimePicker"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="371dp" />

            <Button
                android:id="@+id/createReminder"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Submit" />
        </LinearLayout>

</LinearLayout>

